--- a/index.html
+++ b/index.html
@@ -20,37 +20,31 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img
-                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/d3ca28bf-e1b7-467e-a00b-c7785be8e397"
+                src="https://raw.githubusercontent.com/wadxaasx/stronka.github.io/main/artworks-gS5U8vwIyquf4CRy-heAR6A-t500x500.jpg"
               />
               <div class="overlay">
                 <a
-                  href="https://www.youtube.com/watch?v=aatr_2MstrI&ab_channel=CleanBandit"
-                  target="_blank"
-                  ><ion-icon name="logo-youtube"></ion-icon
+                  href="https://www.youtube.com/watch?v=U-l4ya3ejko"
                 ></a>
               </div>
             </div>
             <div class="swiper-slide">
               <img
-                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/1afe4c6a-0287-43f0-9076-92f8be49d9dc"
+                src="https://raw.githubusercontent.com/wadxaasx/stronka.github.io/main/yala.jpg"
               />
               <div class="overlay">
                 <a
-                  href="https://www.youtube.com/watch?v=qEnfeG8uBRY&ab_channel=AliciaKeys-Topic"
-                  target="_blank"
-                  ><ion-icon name="logo-youtube"></ion-icon
+                  href="https://www.youtube.com/watch?v=ppUGaXd9pzY"
                 ></a>
               </div>
             </div>
             <div class="swiper-slide">
               <img
-                src="https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/abaa23bd-8c93-4219-a3ef-0d0cb6f12566"
+                src="https://raw.githubusercontent.com/wadxaasx/stronka.github.io/main/Rich_Amiri_-_One_Call.jpg"
               />
               <div class="overlay">
                 <a
-                  href="https://www.youtube.com/watch?v=h5oHhGlWKf0&ab_channel=MuzikPlay"
-                  target="_blank"
-                  ><ion-icon name="logo-youtube"></ion-icon
+                  href="https://www.youtube.com/watch?v=l3sBEoSEvOA"
                 ></a>
               </div>
             </div>
@@ -61,8 +55,6 @@
               <div class="overlay">
                 <a
                   href="https://www.youtube.com/watch?v=a5uQMwRMHcs&ab_channel=DaftPunkVEVO"
-                  target="_blank"
-                  ><ion-icon name="logo-youtube"></ion-icon
                 ></a>
               </div>
             </div>
